2016-05-26  SilverNexus
	* search.c: Define start_line and end_line as const char * in multi-search.
	  Fix a condition structure bug when HAVE_MMAP is not defined.

2016-05-25  SilverNexus
	* main.c: Made case insensitive searches convert all characters to lowercase
	  before building the jump table or searching.
	  Also, remove the search timer. It was too granular and generally unhelpful.
	* fileperuser_search.c: Removed conversion of the character in needle to
	  lowercase and added documentation indicating that the function expects
	  an all-lowercase needle.
	* jump_table.c: Removed conversion of search string character to lowercase.
	  Added documentation to indicate the function expected a lowercased needle
	  on case-insensitive searches.
	* settings.h: Moved the min jump table defines to jump_table.h.
	  Adjusted dir_list functions to not void return type.
	* jump_table.h: Add min jump table defines from settings.h.
	* dir_list.c: Update return information for init_dir_node() to indicate
	  it cannot return null.
	* settings.c: Removed return values from dir_list functions and updated
	  documentation to reflect this change.
	* dir_list.h: Merge typedef into struct declaration.
	* parseArgs.c: Remove checks to ensure min_print_level and min_log_level
	  received numeric values -- atoi returns 0 on non-numeric input.
	  Refactored argument parsing to reduce calls to strcmp().
	* search.c: Use macros to further optimize file search operations.

2016-05-16  SilverNexus
	* search.c: Fixed a bug introduced when removing function pointers for
	  the search function. len was not adjusted for fileperuser_memcasemem().
	  Then refactored filepruser_memcasemem() to use the address of the
	  last spot needed to search in haystack instead of the length.
	* fileperuser_search.c: Refactored so that the index of the endpoint
	  of the search is calculated once, not on every entry to the function.